gradle: added 'customJre' and 'compressCustomJre'